--- a/template.html
+++ b/template.html
@@ -22,15 +22,15 @@
 </ol>
 
 <ul>
-	<li><a href=http://google.com> target=”_blank”Google</a></li>
-	<li><a href=http://apple.com> target=”_blank”Apple</a></li>
+	<li><a href=http://google.com>Google</a></li>
+	<li><a href=http://apple.com>”Apple</a></li>
 </ul>
 
 <p><a href=”page2.html” target=”_blank”>My second page</a></p>
-<img src=”images/cat_360.jpg” title=”My awesome cat” alt=”A cat with a hat” width=”100%” height=”254” />
+<img src=”images/cat_360.jpg” title=”My awesome cat” alt=”A cat with a hat” width=”100%” height=”100%” />
 
 </body>
 
-<!> w3c validator
+<!> w3c validator </!>
 
 </html>
