--- a/My_website/bullshit/Home page/template.html
+++ b/My_website/bullshit/Home page/template.html
@@ -10,7 +10,7 @@
 
 <h1>Headline goes here</h>
 <p><a href ="mailto:jmtz9f@mail.missouri.edu">jmtz9f@mail.missouri.edu</a><p>
-<p>Paragraph is here with more text and smaller type</p>
+<p>Julia Terbrock's website</p>
 <ol>
 	<li>Dog</li>
 	<li>Cat</li>
@@ -27,7 +27,7 @@
 </ul>
 
 <p><a href=”page2.html” target=”_blank”>My second page</a></p>
-<img src=”images/cat_360.jpg” title=”My awesome cat” alt=”A cat with a hat” width=”100%” height=”254” />
+<img src=”images/JuliaTerbrock/blackcat.jpg” title=”Kitty” alt=”Cute" width=”100%” height=”254” />
 
 </body>
 
