--- a/My_website/bullshit/Home page/template.html
+++ b/My_website/bullshit/Home page/template.html
@@ -10,7 +10,7 @@
 
 <h1>Headline goes here</h>
 <p><a href ="mailto:jmtz9f@mail.missouri.edu">jmtz9f@mail.missouri.edu</a><p>
-<p>Julia Terbrock's website</p>
+<p><b>Julia Terbrock's website</b></p>
 <ol>
 	<li>Dog</li>
 	<li>Cat</li>
