changes with pages

--- a/My_website/bullshit/Home page/my website.html
+++ b/My_website/bullshit/Home page/my website.html
@@ -9,19 +9,20 @@
 
 <body>
 
-<h1>Headline goes here</h>
+<h1><b>Julia Terbrock's website</b></h>
 <p><a href ="mailto:jmtz9f@mail.missouri.edu">jmtz9f@mail.missouri.edu</a><p>
-<p>Paragraph is here with more text and smaller type</p>
 <p>What happened when the wheel was invented?</p>
-<p>It caused a revolution!</p>
+<p>It caused a revolution! :^)</p>
+<p></p>
+<p>Favorite foods (in no particular order)</p>
 <ol>
-	<li>Dog</li>
-	<li>Cat</li>
-	<li>Bird</li>
+	<li>Mexican food</li>
+	<li>Pizza</li>
+	<li>Breakfast food</li>
 		<ul>
-			<li>Parrot</li>
-			<li>Robin</li>
-			<li>Woodpecker</li>
+			<li>Waffles</li>
+			<li>Sausage links</li>
+			<li>Eggs</li>
 </ol>
 
 <ul>
@@ -30,10 +31,9 @@
 </ul>
 
 <p><a href=”page2.html” target=”_blank”>My second page</a></p>
-<img src=”images/cat_360.jpg” title=”My awesome cat” alt=”A cat with a hat” width=”100%” height=”254” />
+<img src=”images/blackcat.jpg” title=”Cat” alt=”QT” width=”50%” height=”50%” />
 
 </body>
 
-<!> w3c validator
 
 </html>
