--- a/My_website/bullshit/Second page/page2.html
+++ b/My_website/bullshit/Second page/page2.html
@@ -8,29 +8,10 @@
 
 <body>
 
-<h1>Headline goes here</h>
-<p><a href ="mailto:jmtz9f@mail.missouri.edu">jmtz9f@mail.missouri.edu</a><p>
-<p>Paragraph is here with more text and smaller type</p>
-<ol>
-	<li>Dog</li>
-	<li>Cat</li>
-	<li>Bird</li>
-		<ul>
-			<li>Parrot</li>
-			<li>Robin</li>
-			<li>Woodpecker</li>
-</ol>
-
-<ul>
-	<li><a href=http://google.com>Google</a></li>
-	<li><a href=http://apple.com>”Apple</a></li>
-</ul>
-
 <p><a href=”page2.html” target=”_blank”>My second page</a></p>
-<img src=”images/cat_360.jpg” title=”My awesome cat” alt=”A cat with a hat” width=”100%” height=”100%” />
+<p>My second page. Here's a cat.</p>
+<img src=”images/JuliaTerbrock/blackcat.jpg” title=”Kitty” alt=”Cute" width=”100%” height=”254” />
 
 </body>
-
-<!> w3c validator </!>
 
 </html>
