--- a/My_website/Second page/page2.html
+++ b/My_website/Second page/page2.html
@@ -9,7 +9,7 @@
 <body>
 
 <p><a href=”page2.html” target=”_blank”>My second page</a></p>
-<p>Here's my second featuring a cat.</p>
+<p>My second page. Here's a cat.</p>
 <img src=”images/JuliaTerbrock/blackcat.jpg” title=”Kitty” alt=”Cute" width=”100%” height=”254” />
 
 </body>
