--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -30,7 +30,7 @@
 	<li><a href=http://apple.com> target=”_blank”Apple</a></li>
 </ul>
 
-<p><a href="./Second%20page/page2.html" target=”_blank”>My second page</a></p>
+<p><a href="../Second%20page/page2.html" target=”_blank”>My second page</a></p>
 <img src=”images/blackcat.jpg” title=”Cat” alt=”QT” width=”50%” height=”50%” />
 
 </body>
