--- a/My_website/Second page/page2.html
+++ b/My_website/Second page/page2.html
@@ -10,7 +10,7 @@
 
 <p><a href=”page2.html” target=”_blank”>My second page</a></p>
 <p>My second page. Here's a cat.</p>
-<img src=”images/JuliaTerbrock/blackcat.jpg” title=”Kitty” alt=”Cute" width=”100%” height=”254” />
+<img src="blackcat.jpg" title=”Kitty” alt=”Cute" width=”100%” height=”254” />
 
 </body>
 
