--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -26,12 +26,12 @@
 </ol>
 
 <ul>
-	<li><a href=http://google.com> target=”_blank”Google</a></li>
+	<li><a href=http://google.com target="_blank">Google</a></li>
 	<li><a href=http://apple.com> target=”_blank”Apple</a></li>
 </ul>
 
 <p><a href="../Second%20page/page2.html" target=”_blank”>My second page</a></p>
-<img src="blackcat.jpg” title=”Cat” alt=”QT” width=”50%” height=”50%” />
+<img src="blackcat.jpg" title="Cat" alt=”QT” width=”50%” height=”50%” />
 
 </body>
 
