--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -5,12 +5,16 @@
 ​
 <head>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <title>Julia Terbrock's website</title>
 </head>
 
 <body>
 
 <h1><b>Julia Terbrock's website</b></h>
-<p><a href ="mailto:jmtz9f@mail.missouri.edu">jmtz9f@mail.missouri.edu</a><p>
+<p>
+  <a href ="mailto:jmtz9f@mail.missouri.edu">
+  <img src="julia.jpg" alt="Julia Terbrock's email!" />
+  </a></p>
 <p>What happened when the wheel was invented?</p>
 <p>It caused a revolution! :^)</p>
 <p></p>
@@ -26,8 +30,8 @@
 </ol>
 
 <ul>
-	<li><a href=http://google.com target="_blank">Google</a></li>
-	<li><a href=http://apple.com> target=”_blank”Apple</a></li>
+	<li><a href=http://google.com>Google</a></li>
+	<li><a href=http://apple.com>Apple</a></li>
 </ul>
 
 <p><a href="../Second%20page/page2.html" target=”_blank”>My second page</a></p>
