--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -9,14 +9,14 @@
 
 <body>
 
-<h1><b>Julia Terbrock's website</b></h>
+<h1><b>Julia Terbrock's website</b></h1>
 <p>
   <a href ="mailto:jmtz9f@mail.missouri.edu">
-  <img src="julia.jpg" alt="Julia Terbrock's email!" />
-  </a></p>
+  <img src="julia.jpg" alt="Julia Terbrock's email!"/>
+  </a>
+</p>
 <p>What happened when the wheel was invented?</p>
 <p>It caused a revolution! :^)</p>
-<p></p>
 <p>Favorite foods (in no particular order)</p>
 <ol>
 	<li>Mexican food</li>
