--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -31,7 +31,7 @@
 		</ul>
 <ul>
 	<li><a href=http://google.com>Google</a></li>
-	<li><a href=http://apple.com>Apple /></li>
+	<li><a href=http://apple.com>Apple</a></li>
 </ul>
 
 <p><a href="../Second%20page/page2.html" target=”_blank”>My second page</a></p>
