--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -34,8 +34,8 @@
 	<li><a href=http://apple.com>Apple</a></li>
 </ul>
 
-<p><a href="../Second%20page/page2.html" target=”_blank”>My second page</a></p>
-<img src="blackcat.jpg" title="Cat" alt=”QT” width=”50%” height=”50%” />
+<p><a href="../Second%20page/page2.html" My second page</a></p>
+<img src="blackcat.jpg" title="Cat" alt="QT" width="50%" height="50%"/>
 
 </body>
 
