--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -35,7 +35,7 @@
 </ul>
 
 <p><a href="../Second%20page/page2.html" target="_blank">My second page</a></p>
-<img src="blackcat.jpg" title="Cat" alt=”QT” width=”50%” height=”50%” />
+<img src="blackcat.jpg" title="Cat" alt= "QT" width= "50%" height= "50%" />
 
 </body>
 
