--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -30,7 +30,7 @@
 			<li>Eggs</li>
 		</ul>
 <ul>
-	<li><a href= https://google.com>Google></li>
+	<li><a href= google.com>Google></li>
 	<li><a href= https://apple.com>Apple></li>
 </ul>
 
