--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -30,14 +30,13 @@
 			<li>Eggs</li>
 		</ul>
 <ul>
-	<li><a href= google.com>Google></li>
-	<li><a href= https://apple.com>Apple></li>
+	<li><a href= "https://google.com">Google></li>
+	<li><a href= "https://apple.com">Apple></li>
 </ul>
 
 <p><a href="../Second%20page/page2.html" target="_blank">My second page</a></p>
 <img src="blackcat.jpg" title="Cat" alt= "QT" width= "50%" height= "50%" />
 
 </body>
-
 
 </html>
