changed transitional doc type
something got erased so i changed it again

--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -1,11 +1,14 @@
-
+​
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-
-
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+​
 <head>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <title>Julia Terbrock's website</title>
 </head>
+
+  <title>Julia Terbrock's website</title>
+
 
 <body>
 
@@ -38,7 +41,7 @@
 </ul>
 
 <p><a href="../Second%20page/page2.html" target="_blank">My second page</a></p>
-<img src="blackcat.jpg" title="Cat" alt= "QT" width= "100%" height= "254" />
+<img src="blackcat.jpg" title="Cat" alt= "QT" width= "100%" height= "100%" />
 
 
 </body>
