--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -1,13 +1,12 @@
-​
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-​
+
 <head>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 </head>
 
-  <title>Julia Terbrock's website</title>
+  <title "Julia Terbrock's website" </title>
 
 
 <body>
@@ -19,8 +18,6 @@
 
   </a>
 </p>
-
-  </a></p>
 
 <p>What happened when the wheel was invented?</p>
 <p>It caused a revolution! :^)</p>
