--- a/My_website/Home page/my website.html
+++ b/My_website/Home page/my website.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 </head>
 
-  <title"Julia Terbrock's website"</title>
+  <title>"Julia Terbrock's website"</title>
 
 
 <body>
